[package]
name = "example-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
redis = { version = "0.25.3", default-features = false, features = [
    "tokio-rustls",
    "tokio-comp",
    "tls-rustls",
    "tokio",
    "tokio-rustls-comp",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.60"
tokio = "1.28.1"
url = "2.3.1"
vercel_runtime = "1.1.1"
xid = "1.0.3"

[lib]
path = "lib/lib.rs"

[[bin]]
name = "api-collections"
path = "api/collections.rs"

[[bin]]
name = "api-collections-id"
path = "api/collections/[collectionid].rs"

[[bin]]
name = "api-collections-id-objects"
path = "api/collections/[collectionid]/objects.rs"

[[bin]]
name = "api-collections-id-objects-id"
path = "api/collections/[collectionid]/objects/[objectid].rs"
